chore(engine): re-add support for JRE 17